--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -5,7 +5,29 @@
         <title>Colmar Academy</title>
     </head>
 <body>
-
+    <!--Header / Navigation-->
+    <header>
+        <div class="header-content">
+            <img src="resources/images/ic-logo.svg"/>
+            <h3 class="logo"><a href="#""><span>COLMAR</span>ACADEMY</a></h3>
+            <nav class="desktop">
+                <ul>
+                    <li><a href="#">On campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">For companies</a></li>
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+            </nav>
+            <!--
+            <nav class="mobile">
+                <ul>
+                    <li><a></a></li>
+                </ul>
+            </nav>
+            -->
+        </div>
+    </header>
+   
 
 </body>
 </html>
