Introduction Section completed

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -27,7 +27,17 @@
             -->
         </div>
     </header>
-   
+   <!-- Introduction Section -->
+   <div class="introduction">
+       <img src="resources/images/banner.jpg"/>
+       <div class="introduction-content">
+           <br><br><br><br><br><br><br>
+           <h1>Learn something new everyday</h1>
+           <h2>Lorem ipsum dolor sit amet, consectur adipsioasdn awjen.</h2>
+           <div class="button"><a href="#">Start here</a></div>
+       </div>
+
+   </div>
 
 </body>
 </html>
