--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -28,16 +28,16 @@
         </div>
     </header>
    <!-- Introduction Section -->
-   <div class="introduction">
+   <div class="introduction-desktop">
        <img src="resources/images/banner.jpg"/>
-       <div class="introduction-content">
+       <div class="introduction-desktop-content">
            <br><br><br><br><br><br><br>
            <h1>Learn something new everyday</h1>
            <h2>Lorem ipsum dolor sit amet, consectur adipsioasdn awjen.</h2>
-           <div class="button"><a href="#">Start here</a></div>
+           <button href="#">Start here</button>
        </div>
-
    </div>
+   <!--Information Section-->
 
 </body>
 </html>
