completed the information section, bare HTML for classes section

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -34,10 +34,92 @@
            <br><br><br><br><br><br><br>
            <h1>Learn something new everyday</h1>
            <h2>Lorem ipsum dolor sit amet, consectur adipsioasdn awjen.</h2>
-           <button href="#">Start here</button>
+           <button><a href="#">START HERE</a></button>
        </div>
    </div>
    <!--Information Section-->
-
+   <div class="information-desktop">
+        <div class="feature-article">
+            <img src="resources/images/information-main.jpg"/>
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras elit diam, venenatis venenatis nulla at,
+                luctus varius dui. Duis turpis eros, scelerisque id mauris quis, egestas fringilla velit.
+                Etiam eget arcu lorem. Sed molestie enim at molestie tempor. Suspendisse egestas turpis et aliquam tristique.
+            </p>
+            <br>
+            <p>
+                Emmanuel, Sr. Strategist at Hiring.com
+            </p>
+        </div>
+        <div class="other-info">
+            <div class="orientation-info">
+                <img src="resources/images/information-orientation.jpg"/>
+                <div class="orientation-info-text">
+                    <h3>Orientation date</h3>
+                    <p>Tue 10/11 & Wed 10/12: 8am to 3pm</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div class="ourcampus-info">
+                <img src="resources/images/information-campus.jpg"/>
+                <div class="ourcampus-info-text">
+                    <h3>Our campus</h3>
+                    <p>Find which campus is close by you</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div class="guestlecture-info">
+                <img src="resources/images/information-guest-lecture.jpg"/>
+                <div class="guestlecture-info-text">
+                    <h3>Our guest lecture</h3>
+                    <p>Joing a keynote with Oliver Sack about intersectional environmentalism</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+        </div>
+   </div>
+   <!--Classes Section-->
+   <div class="classes-desktop">
+       <h1>Start learning</h1>
+       <div class="classes-list">
+            <div class="class-1">
+                <img src="resources/images/course-software.jpg"/>
+                <h3>Software engineering</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="class-2">
+                <img src="resources/images/course-computer-art.jpg"/>
+                <h3>Computer art</h3>
+                <p>COURSES</p>
+                <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+            <div class="class-3">
+                <img src="resources/images/course-design.jpg"/>
+                <h3>Design</h3>
+                <p>COURSES</p>
+                <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+            <div class="class-4">
+                <img src="resources/images/course-data.jpg"/>
+                <h3>Data</h3>
+                <p>COURSES</p>
+                <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+            <div class="class-5">
+                <img src="resources/images/course-business.jpg"/>
+                <h3>Business</h3>
+                <p>COURSES</p>
+                <p>Product Development, Business Development, Startup</p>
+            </div>
+            <div class="class-6">
+                <img src="resources/images/course-marketing.jpg"/>
+                <h3>Marketing</h3>
+                <p>COURSES</p>
+                <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+       </div>
+   </div>
 </body>
 </html>
