--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -80,46 +80,44 @@
         </div>
    </div>
    <!--Classes Section-->
+   <h1 id="classes-title">Start learning</h1>
    <div class="classes-desktop">
-       <h1>Start learning</h1>
-       <div class="classes-list">
-            <div class="class-1">
-                <img src="resources/images/course-software.jpg"/>
-                <h3>Software engineering</h3>
-                <p>COURSES</p>
-                <p>Web Development, Mobile Development, iOT, APIs</p>
-            </div>
-            <div class="class-2">
-                <img src="resources/images/course-computer-art.jpg"/>
-                <h3>Computer art</h3>
-                <p>COURSES</p>
-                <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-            </div>
-            <div class="class-3">
-                <img src="resources/images/course-design.jpg"/>
-                <h3>Design</h3>
-                <p>COURSES</p>
-                <p>User Experience Design, User Research, Visual Design</p>
-            </div>
-            <div class="class-4">
-                <img src="resources/images/course-data.jpg"/>
-                <h3>Data</h3>
-                <p>COURSES</p>
-                <p>Data Science, Big Data, SQL, Data Visualization</p>
-            </div>
-            <div class="class-5">
-                <img src="resources/images/course-business.jpg"/>
-                <h3>Business</h3>
-                <p>COURSES</p>
-                <p>Product Development, Business Development, Startup</p>
-            </div>
-            <div class="class-6">
-                <img src="resources/images/course-marketing.jpg"/>
-                <h3>Marketing</h3>
-                <p>COURSES</p>
-                <p>Analytics, Content Marketing, Mobile Marketing</p>
-            </div>
-       </div>
+        <div class="class-1">
+            <img src="resources/images/course-software.jpg"/>
+            <h3>Software engineering</h3>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+        <div class="class-2">
+            <img src="resources/images/course-computer-art.jpg"/>
+            <h3>Computer art</h3>
+            <p>COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+        <div class="class-3">
+            <img src="resources/images/course-design.jpg"/>
+            <h3>Design</h3>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+        <div class="class-4">
+            <img src="resources/images/course-data.jpg"/>
+            <h3>Data</h3>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+        <div class="class-5">
+            <img src="resources/images/course-business.jpg"/>
+            <h3>Business</h3>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+        </div>
+        <div class="class-6">
+            <img src="resources/images/course-marketing.jpg"/>
+            <h3>Marketing</h3>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
    </div>
 </body>
 </html>
