nearly completed the Thesis section; slight formatting issue on the righthand side

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -5,7 +5,7 @@
         <title>Colmar Academy</title>
     </head>
 <body>
-    <!--Header / Navigation-->
+    <!-- ----------------------- HEADER / NAV -------------------------------- -->
     <header>
         <div class="header-content">
             <img src="resources/images/ic-logo.svg"/>
@@ -37,15 +37,15 @@
            <button><a href="#">START HERE</a></button>
        </div>
    </div>
-   <!--Information Section-->
+   <!-- -------------------------- INFORMATION SECTION ------------------------------ -->
    <div class="information-desktop">
         <div class="feature-article">
             <img src="resources/images/information-main.jpg"/>
-            <h1>It doesn't hurt to keep practicing</h1>
+            <h1><a href="#">It doesn't hurt to keep practicing</a></h1>
             <p>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras elit diam, venenatis venenatis nulla at,
                 luctus varius dui. Duis turpis eros, scelerisque id mauris quis, egestas fringilla velit.
-                Etiam eget arcu lorem. Sed molestie enim at molestie tempor. Suspendisse egestas turpis et aliquam tristique.
+                Etiam eget arcu lorem. Sed molestie enim at molestie tempor. Suspendisse egestas turpis et aliquam tristique."
             </p>
             <br>
             <p>
@@ -79,7 +79,7 @@
             </div>
         </div>
    </div>
-   <!--Classes Section-->
+   <!-- --------------------- CLASSES SECTION --------------------------- -->
    <h1 id="classes-title">Start learning</h1>
    <div class="classes-desktop">
         <div class="class-1">
@@ -119,5 +119,45 @@
             <p>Analytics, Content Marketing, Mobile Marketing</p>
         </div>
    </div>
+   <!-- ---------------------- THESIS EXHIBIT ----------------------------- -->
+   <h1 id="thesis-title">Thesis Exhibit</h1>
+   <div class="thesis-desktop">
+       <div class="feature-video">
+           <video autoplay muted loop>
+               <source src="resources/videos/thesis.mp4"
+               type="video/mp4">
+           </video>
+           <h2><a href="#">Reimagine urban</a></h2>
+           <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi porttitor risus in ornare rutrum. 
+            Aliquam nec ullamcorper massa. Vestibulum viverra auctor magna maximus gravida. Integer bibendum tempus 
+            tortor in sollicitudin. Ut sed condimentum ex. Fusce scelerisque rhoncus orci vel facilisis."
+           </p>
+       </div>
+       <div class="other-thesis">
+           <div class="other-thesis-1">
+               <img src="resources/images/thesis-fisma.jpg"/>
+               <div class="other-thesis-1-text">
+                   <h2><a href="#">Fisma: Design and Prototype</a></h2>
+                   <p>Designer showcase of new prototype product</p>
+               </div>
+           </div>
+           <div class="other-thesis-2">
+               <img src="resources/images/thesis-now-and-then.jpg"/>
+               <div class="other-thesis-2-text">
+                   <h2><a href="#">Now and Then</a></h2>
+                   <p>Research study about New York</p>
+               </div>
+           </div>
+       </div>
+   </div>
+   <footer>
+       <p>
+           &copy2016 Colmar Academy. All rights reserved
+       </p>
+       <p>
+           Terms  Privacy
+       </p>
+   </footer>
 </body>
 </html>
