finished the desktop version of the website!

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -155,8 +155,8 @@
        <p>
            &copy2016 Colmar Academy. All rights reserved
        </p>
-       <p>
-           Terms  Privacy
+       <p id="terms-privacy">
+           Terms Privacy
        </p>
    </footer>
 </body>
