stuck on mobile header

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -7,7 +7,7 @@
 <body>
     <!-- ----------------------- HEADER / NAV -------------------------------- -->
     <header>
-        <div class="header-content">
+        <div class="header-content-desktop">
             <img src="resources/images/ic-logo.svg"/>
             <h3 class="logo"><a href="#""><span>COLMAR</span>ACADEMY</a></h3>
             <nav class="desktop">
@@ -18,13 +18,16 @@
                     <li><a href="#">Sign in</a></li>
                 </ul>
             </nav>
-            <!--
-            <nav class="mobile">
+        </div>
+        <div class="header-content-mobile">
+            <nav class="nav-mobile">
                 <ul>
-                    <li><a></a></li>
+                    <li><a href="#"><img src="resources/images/ic-logo.svg"/></a></li>
+                    <li><a href="#"><img src="resources/images/ic-on-campus.svg"/></a></li>
+                    <li><a href="#"><img src="resources/images/ic-online.svg"/></a></li>
+                    <li><a href="#"><img src="resources/images/ic-login.svg"></a></li>
                 </ul>
             </nav>
-            -->
         </div>
     </header>
    <!-- Introduction Section -->
@@ -33,7 +36,7 @@
        <div class="introduction-desktop-content">
            <br><br><br><br><br><br><br>
            <h1>Learn something new everyday</h1>
-           <h2>Lorem ipsum dolor sit amet, consectur adipsioasdn awjen.</h2>
+           <h2>Lorem ipsum dolor sit amet, consectur adipiscing elit.</h2>
            <button><a href="#">START HERE</a></button>
        </div>
    </div>
