finished mobile header

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -20,14 +20,10 @@
             </nav>
         </div>
         <div class="header-content-mobile">
-            <nav class="nav-mobile">
-                <ul>
-                    <li><a href="#"><img src="resources/images/ic-logo.svg"/></a></li>
-                    <li><a href="#"><img src="resources/images/ic-on-campus.svg"/></a></li>
-                    <li><a href="#"><img src="resources/images/ic-online.svg"/></a></li>
-                    <li><a href="#"><img src="resources/images/ic-login.svg"></a></li>
-                </ul>
-            </nav>
+            <a href="#"><img src="resources/images/ic-logo.svg"/></a>
+            <a href="#"><img src="resources/images/ic-on-campus.svg"/></a>
+            <a href="#"><img src="resources/images/ic-online.svg"/></a>
+            <a href="#"><img src="resources/images/ic-login.svg"/></a>
         </div>
     </header>
    <!-- Introduction Section -->
