completed mobile header / fixed mediaquery bug

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -20,10 +20,18 @@
             </nav>
         </div>
         <div class="header-content-mobile">
-            <a href="#"><img src="resources/images/ic-logo.svg"/></a>
-            <a href="#"><img src="resources/images/ic-on-campus.svg"/></a>
-            <a href="#"><img src="resources/images/ic-online.svg"/></a>
-            <a href="#"><img src="resources/images/ic-login.svg"/></a>
+            <div class="mobile-img">
+                <a href="#"><img src="resources/images/ic-logo.svg"/></a>
+            </div>
+            <div class="mobile-img">
+                <a href="#"><img src="resources/images/ic-on-campus.svg"/></a>
+            </div>
+            <div class="mobile-img">
+                <a href="#"><img src="resources/images/ic-online.svg"/></a>
+            </div>
+            <div class="mobile-img">
+                <a href="#"><img src="resources/images/ic-login.svg"/></a>
+            </div>
         </div>
     </header>
    <!-- Introduction Section -->
