completed introduction mobile section

--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -44,6 +44,12 @@
            <button><a href="#">START HERE</a></button>
        </div>
    </div>
+   <div class="introduction-mobile">
+       <img src="resources/images/banner.jpg"/>
+       <h1>Learn something new everyday</h1>
+       <h2>Lorem ipsum dolor sit amet, consectur adipiscing elit.</h2>
+       <button><a href="#">START HERE</a></button>
+   </div>
    <!-- -------------------------- INFORMATION SECTION ------------------------------ -->
    <div class="information-desktop">
         <div class="feature-article">
