--- a/capstone_colmaracademy.html
+++ b/capstone_colmaracademy.html
@@ -92,6 +92,26 @@
             </div>
         </div>
    </div>
+   <div class="information-mobile">
+        <div class="orientation-info-mobile">
+            <img src="resources/images/information-orientation-mobile.jpg"/>
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am to 3pm</p>
+            <a href="#">Read more</a>
+        </div>
+        <div class="ourcampus-info-mobile">
+            <img src="resources/images/information-campus-mobile.jpg"/>
+            <h3>Our campus</h3>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read more</a>
+        </div>
+        <div class="guestlecture-info-mobile">
+            <img src="resources/images/information-guest-lecture-mobile.jpg"/>
+            <h3>Our guest lecture</h3>
+            <p>Joing a keynote with Oliver Sack about intersectional environmentalism</p>
+            <a href="#">Read more</a>
+        </div>
+   </div>
    <!-- --------------------- CLASSES SECTION --------------------------- -->
    <h1 id="classes-title">Start learning</h1>
    <div class="classes-desktop">
@@ -132,6 +152,15 @@
             <p>Analytics, Content Marketing, Mobile Marketing</p>
         </div>
    </div>
+   <div class="classes-mobile">
+       <h1><a href="#">Start learning</a></h1>
+       <h2><a href="#">Software engineering</a></h2>
+       <h2><a href="#">Computer art</a></h2>
+       <h2><a href="#">Design</a></h2>
+       <h2><a href="#">Data</a></h2>
+       <h2><a href="#">Business</a></h2>
+       <h2><a href="#">Marketing</a></h2>
+   </div>
    <!-- ---------------------- THESIS EXHIBIT ----------------------------- -->
    <h1 id="thesis-title">Thesis Exhibit</h1>
    <div class="thesis-desktop">
@@ -164,6 +193,14 @@
            </div>
        </div>
    </div>
+   <div class="thesis-mobile">
+       <h1>Thesis exhibits</h1>
+        <video autoplay muted loop>
+            <source src="resources/videos/thesis.mp4"
+            type="video/mp4">
+        </video>
+   </div>
+   <!-- ---------------------- FOOTER ----------------------------- -->
    <footer>
        <p>
            &copy2016 Colmar Academy. All rights reserved
